# ChangeLog for net-im/kadu-powerkadu
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-powerkadu-2.1.1.ebuild:
  Bumped.

  12 Nov 2008; Michał Ziąbkowski <mziab@o2.pl> kadu-powerkadu-2.1.ebuild:
  Re-added split_messages dep.

  13 Aug 2008; Piotr Szymaniak <lazy_bum@o2.pl> kadu-powerkadu-2.0.3.ebuild,
  kadu-powerkadu-2.0.4.ebuild:
  Fixed few repoman reported errors.

  06 Jun 2008; Michał Ziąbkowski <mziab@o2.pl>
  kadu-powerkadu-2.0.3.ebuild, kadu-powerkadu-2.0.4.ebuild:
  Made ebuild more beautiful.

  06 Jun 2008; Michał Ziąbkowski <mziab@o2.pl>
  kadu-powerkadu-2.0.3.ebuild, kadu-powerkadu-2.0.4.ebuild:
  Added missing dep

  06 Jun 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-powerkadu-2.0.4.ebuild:
  Bumped.

  20 May 2008; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-powerkadu-2.0.1.ebuild:
  Removed cruft.

  31 Mar 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-powerkadu-2.0.3.ebuild:
  Bumped
