@@ -1,10 +1,13 @@
-DIST kadu-0.6.5.tar.bz2 1312474 RMD160 26a80cb7b0c7dbc8c2c38ae9b8aa6609eb0fd8ad SHA1 9cacbec423c192f6482d9d67a163350191f5bfe2 SHA256 09f17f4b23a3ea8590135ff4a050b52565f3a364bfe4d986079c5be0bba83fdb
+DIST kadu-0.6.5.1.tar.bz2 1341099 RMD160 3c1a8a770d0701e019b5ed68658d20ea6f789e45 SHA1 1257b37c30d9682d4fd350b78d983de04b970872 SHA256 e2df2e1d7c1fa9a5d931a35efeb936088c42ef4b5d42fef8dddadc40f87397e2
 DIST kadu-powerkadu-2.0.3.tar.bz2 21274 RMD160 7d9dd5b56fb5ee3d694cce0d03416bb5e2c63810 SHA1 c561a24c13a34c2fdf5c776e992efb4c07ed30cf SHA256 33d142d45375d3584b7a24cd4d1c524808c328c224fb467b7d916bb6bec7952c
 DIST kadu-powerkadu-2.0.4.tar.bz2 21225 RMD160 c82de7debe084d1534c1f3c0be1e6cdbdae61fc2 SHA1 358f7131ade4ea214e3cc7cfce094d74676ba1ab SHA256 374be83c525a80e4769d3ddce5c8d3c1d79272cc78d71b80cab29d542aabd8b7
 DIST kadu-powerkadu-2.1.1.tar.bz2 21910 RMD160 ba706027480fdcc22060be497f7a965c6d79e95c SHA1 70e33a236c4119ce81ca1d99946f83cade6bb62d SHA256 e97d38d56f496a5d8e8ccaddef4e5c35c29aa42f3a5d9639326312973ece3d68
-DIST kadu-powerkadu-2.1.tar.bz2 21874 RMD160 6c081052bd559c3af370aef1c77d18b7138d8037 SHA1 81567851c87edbb2aba81e34fc14d8cf61f775b0 SHA256 d077cfb22da7dd321f7dbc40e86b784cec71917897fbc860333a17e852403a9b
-EBUILD kadu-powerkadu-2.0.3.ebuild 487 RMD160 c69393c2c63a921279e7bf78f4a8ac670d6b2eba SHA1 57e71927d6a478709176ab9479b86c4ff0daf6b1 SHA256 9bc747123a5db6bf9b1717a8772e9fd6f41d89b85a952af2b2503eacd69ad442
-EBUILD kadu-powerkadu-2.0.4.ebuild 487 RMD160 c69393c2c63a921279e7bf78f4a8ac670d6b2eba SHA1 57e71927d6a478709176ab9479b86c4ff0daf6b1 SHA256 9bc747123a5db6bf9b1717a8772e9fd6f41d89b85a952af2b2503eacd69ad442
-EBUILD kadu-powerkadu-2.1.1.ebuild 589 RMD160 1902cfddf435c0ec34457ae4ac219572ec30cd60 SHA1 1c12c5331ec4c390061331c956982dfc5e9f4759 SHA256 0b091e881e39a36c7302469447398f1a50e97a1dfdc3d4d81ec839dac1f4fe58
-EBUILD kadu-powerkadu-2.1.ebuild 587 RMD160 41d17d9aec25d8af12be2c9a9fef9777813dc647 SHA1 055f2d7ebe77b5c7f3d2d1d283a1fd503b6e85dc SHA256 13bfe4f4b26644f39b7b0c8331e95f0700749dd1e02c00092fd994cfec45ed45
-MISC ChangeLog 1020 RMD160 7aa57acb46930fba6fe643caa773abc300d7a80b SHA1 7b282b69cf4ab8c8e90eea6fb411ef13302bcbf0 SHA256 e214ceb56ce018f66d85ab0a25bc18e7915617a5b9e87c7ec7102fd6b051504d
+DIST kadu-powerkadu-2.1.2.tar.bz2 21874 RMD160 6c0f597b7b63465d51f3f8bbe5d0a7f0bb73b857 SHA1 41078c3c021057e894e8960d59aa93d91f3439c2 SHA256 3491e279632917c6684c7ff6032b99f60179bdbee406ee08b86650efea114aa2
+DIST kadu-powerkadu-2.1.tar.bz2 21847 RMD160 31cffef37651815d0e2c5a7038427782b633fb67 SHA1 167b0ed2072d6f455c557a7d0a1141a3476a1c17 SHA256 56f4bbf9469dd4fab5544cca2ce20364ba5597072d171bb37598d4a3f22b4bd4
+EBUILD kadu-powerkadu-2.0.3.ebuild 616 RMD160 967b3d6579ca052f16341addfe1ef3093b70e2ae SHA1 1cfc3514382abfacc0f3e3f8bea3bdac03edde0f SHA256 c2819b7165308905ad2a66e6dfdf0bb09483a78b3c57cbc83c0bd04f4156eb22
+EBUILD kadu-powerkadu-2.0.4.ebuild 616 RMD160 967b3d6579ca052f16341addfe1ef3093b70e2ae SHA1 1cfc3514382abfacc0f3e3f8bea3bdac03edde0f SHA256 c2819b7165308905ad2a66e6dfdf0bb09483a78b3c57cbc83c0bd04f4156eb22
+EBUILD kadu-powerkadu-2.1.1.ebuild 689 RMD160 92d123b780ed74e7348307b6d9dce16989d47f50 SHA1 faf749ac0ab50c77b82cf37e418cf3c6504726c1 SHA256 b8cc18c02bfdfc1c835172eb421a536d50f6b686fc636deb237d35caa7f8103b
+EBUILD kadu-powerkadu-2.1.2.ebuild 671 RMD160 ff2e65218eb72b262db301ff13aca0d31dc76c3c SHA1 dc175cd6ce088b60f4515b4690de5b588103728e SHA256 8220330f00ff20739f6832db1b07983e98ceade106e4494a5964b48e1b64227b
+EBUILD kadu-powerkadu-2.1.ebuild 687 RMD160 fb6a59b8789413b58e0e8b752b36ec30e10146d4 SHA1 e5790c2831d8ae4f0c2ab1c5a1c2b6719c2bcc92 SHA256 fcae1aff3c8bcdc960e8fa0d4c0026c6c059eaef2511b87f65451c92af667571
+MISC ChangeLog 1265 RMD160 ff1c79a677661392d4d583374a23bcc57e4d38b9 SHA1 90087e5d5ff2912338b0e7fb54cde0e9e8352211 SHA256 193eb3b4ce1da0b42cead452dce90f111e092c9926125979b23095df4100e68b
+MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
