@@ -1,3 +1,7 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
 SRC_URI="http://www.kadu.net/~dorr/moduly/${P}.tar.bz2"
 
 inherit kadu
@@ -17,3 +21,4 @@ inherit kadu-module
 DESCRIPTION="Kadu module that appends many interesting features"
 HOMEPAGE="http://kadu.net"
 KEYWORDS="amd64 x86"
+IUSE=""
