@@ -1,16 +1,16 @@
-#
-# PACKAGE INFORMATION
-#
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
 
 inherit kadu-base
 
 MOD_DEPEND=">=net-im/kadu-anonymous_check-0.6.5.1
-	    ~net-im/kadu-antistring-${MIN_VER}
-	    ~net-im/kadu-auto_hide-${MIN_VER}
-	    ~net-im/kadu-autostatus-${MIN_VER}
-	    ~net-im/kadu-cenzor-${MIN_VER}
-	    ~net-im/kadu-parser_extender-${MIN_VER}
-	    ~net-im/kadu-word_fix-${MIN_VER}
+	    >=net-im/kadu-antistring-${MIN_VER}
+	    >=net-im/kadu-auto_hide-${MIN_VER}
+	    >=net-im/kadu-autostatus-${MIN_VER}
+	    >=net-im/kadu-cenzor-${MIN_VER}
+	    >=net-im/kadu-parser_extender-${MIN_VER}
+	    >=net-im/kadu-word_fix-${MIN_VER}
 	    >=net-im/kadu-split_messages-0.3"
 MOD_URI="http://www.kadu.net/~dorr/moduly/kadu-powerkadu-${PV}.tar.bz2"
 MOD_TYPE="ext"
