@@ -4,13 +4,13 @@
 
 inherit kadu-base
 
-MOD_DEPEND=">=net-im/kadu-anonymous_check-0.6.5
-	    >=net-im/kadu-antistring-${MIN_VER}
-	    >=net-im/kadu-auto_hide-${MIN_VER}
-	    >=net-im/kadu-autostatus-${MIN_VER}
-	    >=net-im/kadu-cenzor-${MIN_VER}
-	    >=net-im/kadu-parser_extender-${MIN_VER}
-	    >=net-im/kadu-word_fix-${MIN_VER}
+MOD_DEPEND=">=net-im/kadu-anonymous_check-0.6.5.1
+	    >=net-im/kadu-antistring-0.6.5.1
+	    >=net-im/kadu-auto_hide-0.6.5.1
+	    >=net-im/kadu-autostatus-0.6.5.1
+	    >=net-im/kadu-cenzor-0.6.5.1
+	    >=net-im/kadu-parser_extender-0.6.5.1
+	    >=net-im/kadu-word_fix-0.6.5.1
 	    >=net-im/kadu-split_messages-0.3"
 MOD_URI="http://www.kadu.net/~dorr/moduly/kadu-powerkadu-${PV}.tar.bz2"
 MOD_TYPE="ext"
