@@ -1,6 +1,12 @@
 # ChangeLog for net-im/kadu-powerkadu
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
+  kadu-powerkadu-2.0.3.ebuild, kadu-powerkadu-2.0.4.ebuild,
+  kadu-powerkadu-2.1.ebuild, kadu-powerkadu-2.1.1.ebuild,
+  +kadu-powerkadu-2.1.2.ebuild, +metadata.xml:
+  Bumped. Some repoman fixes.
 
   08 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
   +kadu-powerkadu-2.1.1.ebuild:
